--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
     <!-- Product 1 -->
 <div class="product-card">
   <img src="images/IMG_new32.jpeg" loading="lazy" alt="Beautyofjeseon BOJ Dynasty Cream">
-  <h3 class="product-name">Beautyofjeseon BOJ Dynasty Cream</h3>
+  <h3 class="product-name">Beautyofjoseon BOJ Dynasty Cream</h3>
   <p class="product-price">$13.40</p>
-  <p class="product-caption" style="display: none;">Beautyofjeseon✨BOJ Dynasty Cream មានធាតុផ្សំ​ : Niacinamide, Squalane, Ceramide NP ដែលជាសារធាតុចាំបាច់ក្នុងការបង្កើតរបាំងការពារស្បែក រក្សាស្បែកឲ្យមានសុខភាពល្អ ទប់ស្កាត់ការបាត់បង់ជាតិទឹក ធ្វើឲ្យស្បែកភ្លឺថ្លា ការពារស្នាមជ្រាវជ្រួញ✨
+  <p class="product-caption" style="display: none;">Beautyofjoseon✨BOJ Dynasty Cream មានធាតុផ្សំ​ : Niacinamide, Squalane, Ceramide NP ដែលជាសារធាតុចាំបាច់ក្នុងការបង្កើតរបាំងការពារស្បែក រក្សាស្បែកឲ្យមានសុខភាពល្អ ទប់ស្កាត់ការបាត់បង់ជាតិទឹក ធ្វើឲ្យស្បែកភ្លឺថ្លា ការពារស្នាមជ្រាវជ្រួញ✨
 
 ផលិតផលកូរ៉េសុទ្ធ🇰🇷</p>
   <button class="buy-now">Buy Now</button>
