--- a/index.html
+++ b/index.html
@@ -213,6 +213,31 @@
     
     <!-- Product 1 -->
 <div class="product-card">
+  <img src="images/IMG_new34.jpeg" loading="lazy" alt="Pelican Soap Hip Care Body Lotion">
+  <h3 class="product-name">Pelican Soap Hip Care Body Lotion</h3>
+  <p class="product-price">$13.50</p>
+  <p class="product-caption" style="display: none;">Pelican Soap Hip Care Body Lotion​ ឡេលាបខ្លួនរបស់ជប៉ុនដែលរចនាឡើងជាពិសេសសម្រាប់ការថែរក្សាត្រគាក និងគូទ។ វាត្រូវបានបង្កើតឡើងដើម្បីផ្តល់សំណើម រលោង និងតឹងស្បែក ខណៈពេលដែលដោះស្រាយភាពគ្រើម ស្ងួត និងខ្វះភាពយឺត។ លក្ខណៈពិសេសសំខាន់ៗ៖
+• Moisturizing & Hydrating: មានសារធាតុចិញ្ចឹមយ៉ាងជ្រៅដល់ស្បែក ធ្វើអោយស្បែកទន់ និងទន់រលោង។
+• Firming Effect: ជួយកែលម្អភាពយឺតនៃស្បែក ដើម្បីឱ្យរូបរាងកាន់តែរឹងមាំ និងរលោង។
+• ក្លិន Peach: មានក្លិនក្រអូប peach ដ៏រីករាយ និងស្រស់ស្រាយដែលចេញមកពីផ្លែ Peach របស់បារាំង។
+• គ្រឿងផ្សំពិសេស៖ រួមមាន peach ceramide សារធាតុចម្រាញ់ពីរុក្ខជាតិ និងសមាសធាតុបំប៉នស្បែកផ្សេងៗទៀត។
+
+ផលិតផលប្រទេសជប៉ុន🇯🇵</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+  <img src="images/IMG_new33.jpeg" loading="lazy" alt="Peach soap (Pelican Soap)">
+  <h3 class="product-name">Peach soap (Pelican Soap)</h3>
+  <p class="product-price">$8.00</p>
+  <p class="product-caption" style="display: none;">Peach soap (Pelican Soap) ជាប្រភេទសាប៊ូដុំដុសខ្លួនផ្សំឡេីងពីផ្លែប៉ែស និងទឹកដោះគោ🍑✨
+
+•ជាផលិតផលល្បីលេខ1 ពីប្រទេសជប៉ុន
+•ជំនាញខាងកម្ចាត់ ស្នាមក្រិន ស្នាមខ្មៅ កន្ទួលគ្រើម
+•ក្លិនក្រអូបជាប់ស្បែកពីផ្លែប៉េស
+•ប្រើបានពេញដងខ្លួន ជាពិសេស ក្រលៀន គួទ កែងដៃ ជង្គង់។🍑✨</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
   <img src="images/IMG_new32.jpeg" loading="lazy" alt="Beautyofjeseon BOJ Dynasty Cream">
   <h3 class="product-name">Beautyofjoseon BOJ Dynasty Cream</h3>
   <p class="product-price">$13.40</p>
