--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
   <!-- ===== PRODUCTS SECTION ===== -->
  <body>
   
-  <header>...</header>
-  <section class="hero-container">...</section>
+  <header></header>
+  <section class="hero-container"></section>
   <section class="products" id="products">
     <h2>Top Selection</h2>
     
@@ -213,10 +213,10 @@
     
     <!-- Product 1 -->
 <div class="product-card">
-  <img src="images/IMG_new34.jpeg" loading="lazy" alt="Pelican Soap Hip Care Body Lotion">
-  <h3 class="product-name">Pelican Soap Hip Care Body Lotion</h3>
+  <img src="images/IMG_new34.jpeg" loading="lazy" alt="Pelican Hip Care Body Lotion">
+  <h3 class="product-name">Pelican Hip Care Body Lotion</h3>
   <p class="product-price">$13.50</p>
-  <p class="product-caption" style="display: none;">Pelican Soap Hip Care Body Lotion​ ឡេលាបខ្លួនរបស់ជប៉ុនដែលរចនាឡើងជាពិសេសសម្រាប់ការថែរក្សាត្រគាក និងគូទ។ វាត្រូវបានបង្កើតឡើងដើម្បីផ្តល់សំណើម រលោង និងតឹងស្បែក ខណៈពេលដែលដោះស្រាយភាពគ្រើម ស្ងួត និងខ្វះភាពយឺត។ លក្ខណៈពិសេសសំខាន់ៗ៖
+  <p class="product-caption" style="display: none;">Pelican Hip Care Body Lotion​ ឡេលាបខ្លួនរបស់ជប៉ុនដែលរចនាឡើងជាពិសេសសម្រាប់ការថែរក្សាត្រគាក និងគូទ។ វាត្រូវបានបង្កើតឡើងដើម្បីផ្តល់សំណើម រលោង និងតឹងស្បែក ខណៈពេលដែលដោះស្រាយភាពគ្រើម ស្ងួត និងខ្វះភាពយឺត។ លក្ខណៈពិសេសសំខាន់ៗ៖
 • Moisturizing & Hydrating: មានសារធាតុចិញ្ចឹមយ៉ាងជ្រៅដល់ស្បែក ធ្វើអោយស្បែកទន់ និងទន់រលោង។
 • Firming Effect: ជួយកែលម្អភាពយឺតនៃស្បែក ដើម្បីឱ្យរូបរាងកាន់តែរឹងមាំ និងរលោង។
 • ក្លិន Peach: មានក្លិនក្រអូប peach ដ៏រីករាយ និងស្រស់ស្រាយដែលចេញមកពីផ្លែ Peach របស់បារាំង។
