--- a/index.html
+++ b/index.html
@@ -213,6 +213,47 @@
     
     <!-- Product 1 -->
 <div class="product-card">
+  <img src="images/IMG_new37.jpeg" loading="lazy" alt="Skin1004 Hyalu Cica water fit sun serum spf50+pa++++">
+  <h3 class="product-name">Skin1004 Hyalu Cica water fit sun serum spf50+pa++++</h3>
+  <p class="product-price">$12.00</p>
+  <p class="product-caption" style="display: none;">Skin1004 Hyalu Cica water fit sun serum spf50+pa++++
+
+ជាប្រភេទ Chemical sunscreen ដែរការពារស្បែកពី uva, uvb &blue rays
+ជួយបំពេញជាតិទឹកនឹងផ្តល់សំនើមដល់ស្បែក
+សាមាសធាតុផ្សំចម្បងពី Centella asiatica and hyaluronic acid ដែរមានតួនាទីរក្សាលំនឹងសំនើមដល់ស្បែកមុខ
+សាច់សាន់ស្គ្រីនស្រាលងាយលាបចូលស្បែកមុខអត់ស្អិតអត់កកឬប្រតាក
+ជួយអោយស្បែកភ្លឺម៉ត់រលោងថែមមួយកំរិតទៀតបន្ទាប់ពីលាប
+
+បងៗចង់បាន2in 1 sunscreen អាចប្រើបានជួយការពារស្បែកហើយមានទាំងសារធាតុសេរ៉ូមជួយចិញ្ចឹមព្យាបាលស្បែកមុខទៀត</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+
+<div class="product-card">
+  <img src="images/IMG_new36.jpeg" loading="lazy" alt="Strawberry Milk Body Lotion">
+  <h3 class="product-name">Strawberry Milk Body Lotion</h3>
+  <p class="product-price">$8.00</p>
+  <p class="product-caption" style="display: none;">Strawberry Milk Body Lotion 🍓🥛🧴
+
+•សាកសមសំរាប់ស្បែកស្ងួតខ្លាំង និង ស្បែកខ្សោយ
+•ជួយផ្ដល់សំណើមដល់ស្បែក កាពារស្បែកស្ងួតប្រេះ
+•ជាពិសេសលាបហើយត្រជាក់ស្បែក និង ទទួលបានស្បែកម៉ត់ភ្លឺថ្លា
+•ក្លិនក្រអូបឈ្ងុយ</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+
+<div class="product-card">
+  <img src="images/IMG_new35.jpeg" loading="lazy" alt="kwailnara peach milk body lotion">
+  <h3 class="product-name">kwailnara peach milk body lotion</h3>
+  <p class="product-price">$8.00</p>
+  <p class="product-caption" style="display: none;">🎀kwailnara peach milk body lotion 🍑🧴
+🎀🧴Lotion •លាបហើយស្បែកក្រអូមផ្លែ🍑😚
+•ជួយផ្តល់សំណើមស្បែកបានល្អ💖🍑
+•ជួយធ្វើឲ្យស្បែកទន់ភ្លឺថ្លា✨
+•ជួយអោយស្បែកទន់រលោង🍑
+•សំបូរទៅដោយវីតាមីនដែលជួយចិញ្ចឹមស្បែកនិងធ្វើអោយស្បែកមានសុខភាពល្អ✨🍑</p>
+  <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
   <img src="images/IMG_new34.jpeg" loading="lazy" alt="Pelican Hip Care Body Lotion">
   <h3 class="product-name">Pelican Hip Care Body Lotion</h3>
   <p class="product-price">$13.50</p>
