--- a/checkout.html
+++ b/checkout.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      color: #E3BC9A;
+      color: #FCC3C2;
       background: white;
       padding: 30px;
     }
@@ -17,10 +17,10 @@
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
-      border-bottom: 3px solid #E3BC9A;
+      border-bottom: 3px solid #FCC3C2;
     }
     .home-button, .cart-button {
-      color: #E3BC9A;
+      color: #FCC3C2;
       text-decoration: none;
     }
     .home-button svg, .cart-button svg {
@@ -47,12 +47,12 @@
       text-decoration: underline;
     }
     #productNameBreadcrumb {
-      color: #E3BC9A;
+      color: #FCC3C2;
     }
     .product-container {
       display: flex;
       flex-direction: column;
-      color:#E3BC9A;
+      color:#FCC3C2;
       align-items: center;
       padding: 30px 20px;
     }
@@ -71,7 +71,7 @@
     }
     .product-details p {
       font-size: 35px;
-      color: #E3BC9A;
+      color: #FCC3C2;
       margin: 8px 0;
     }
     .buttons {
@@ -83,7 +83,7 @@
     .btn {
       padding: 30px 60px;
       border: none;
-      background: #E3BC9A;
+      background: #FCC3C2;
       color: white;
       cursor: pointer;
       border-radius: 10px;
@@ -96,7 +96,7 @@
       font-family: 'Quicksand', serif;
       font-size: 30px;
       color: #000000;
-      background-color: #E3BC9A;
+      background-color: #FCC3C2;
       padding: 15px;
       margin-top: 20px;
       border-left: 5px solid #000000;
@@ -109,7 +109,7 @@
       text-align: center;
       margin-top: 40px;
       padding: 20px 0;
-      border-top: 3px solid #E3BC9A;
+      border-top: 3px solid #FCC3C2;
     }
     .follow-us h3 {
       font-family: 'Poppins', sans-serif;
@@ -136,7 +136,7 @@
       font-size: 25px;
       font-weight: bold;
       padding: 7px 14px;
-      background: #E3BC9A;
+      background: #FCC3C2;
       border-radius: 50%;
       color: white;
       min-width: 24px;
@@ -215,7 +215,7 @@
     <div class="follow-us">
       <h3>Follow Us</h3>
       <div class="social-links">
-        <a href="https://www.facebook.com/share/1A4JiiCvub/?mibextid=wwXIfr" target="_blank" class="facebook" title="Facebook">
+        <a href="https://www.facebook.com/share/1BnnhoCEzE/?mibextid=wwXIfr" target="_blank" class="facebook" title="Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
         <a href="https://www.tiktok.com/@sreypheap.beauty?_t=ZS-8yCil3fmirH&_r=1" target="_blank" class="tiktok" title="TikTok">
