--- a/cart.html
+++ b/cart.html
@@ -17,14 +17,14 @@
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
-      border-bottom: 3px solid #E3BC9A;
+      border-bottom: 3px solid #FCC3C2;
       background: #fff;
     }
 
     .store-name {
       font-size: 50px;
       font-weight: bold;
-      color: #E3BC9A;
+      color: #FCC3C2;
       flex: 1;
       text-align: center;
     }
@@ -68,7 +68,7 @@
       padding: 6px;
       font-size: 30px;
       border-radius: 5px;
-      border: 1px solid #E3BC9A;
+      border: 1px solid #FCC3C2;
       text-align: center;
       margin-left: 5px;
       margin-right: 5px;
@@ -78,7 +78,7 @@
       margin: 0 5px 0 0;
       padding: 8px 12px;
       font-size: 18px;
-      background-color: #E3BC9A;
+      background-color: #FCC3C2;
       border: none;
       border-radius: 5px;
       color: white;
@@ -88,7 +88,7 @@
     }
 
     .item-info button:hover {
-      background-color: #d2a578;
+      background-color: #FCC3C2;
     }
 
     .total-price {
@@ -96,12 +96,12 @@
       margin-top: 20px;
       text-align: right;
       font-weight: bold;
-      color: #E3BC9A;
+      color: #FCC3C2;
     }
     
     .pay-button {
       display: inline-block;
-      background-color: #E3BC9A;
+      background-color: #FCC3C2;
       color: white;
       padding: 12px 25px;
       border-radius: 25px;
@@ -112,7 +112,7 @@
     }
 
     .pay-button:hover {
-      background-color: #d1a47b;
+      background-color: #FCC3C2;
     }
 
     .checkout-section {
@@ -121,13 +121,13 @@
       max-width: 4000px;
       background-color: #fdf9f5;
       border-radius: 100px;
-      border: 2px dashed #E3BC9A;
+      border: 2px dashed #FCC3C2;
       box-shadow: 0 4px 8px rgba(227, 188, 154, 0.3);
       text-align: center;
     }
 
     .checkout-section h2, .checkout-section h3 {
-      color: #E3BC9A;
+      color: #FCC3C2;
       font-size: 35px;
       margin-bottom: 15px;
     }
@@ -159,7 +159,7 @@
     }
 
 .checkout-section button {
-  background-color: #E3BC9A;
+  background-color: #FCC3C2;
   color: white;
 
   width: 100%;          /* ✅ មិនលើស container */
@@ -182,7 +182,7 @@
 
 /* 🟢 Hover effect (ទន់ ស្អាត) */
 .checkout-section button:hover {
-  background-color: #d2a578;
+  background-color: #FCC3C2;
   transform: scale(1.02);
 }
 
@@ -192,7 +192,7 @@
 }
 
     .checkout-section button:hover {
-      background-color: #d2a578;
+      background-color: #FCC3C2;
     }
 
     .empty {
@@ -222,7 +222,7 @@
 <body>
 
   <header>
-    <a href="index.html" style="color:#E3BC9A; text-decoration:none; font-size: 36px;">← Home</a>
+    <a href="index.html" style="color:#FCC3C2; text-decoration:none; font-size: 36px;">← Home</a>
     <div class="store-name">SREYPHEAP BEAUTY</div>
     <div></div>
   </header>
