--- a/order-success.html
+++ b/order-success.html
@@ -14,17 +14,17 @@
     }
     header {
       padding: 15px 20px;
-      border-bottom: 3px solid #E3BC9A;
+      border-bottom: 3px solid #FCC3C2;
     }
     .store-name {
       font-size: 50px;
       font-weight: bold;
-      color: #E3BC9A;
+      color: #FCC3C2;
     }
     h1 {
       margin-top: 70px;
       font-size: 45px;
-      color: #E3BC9A;
+      color: #FCC3C2;
     }
     .order-summary {
       margin: 30px auto;
@@ -32,14 +32,14 @@
       max-width: 900px;
       background: #fdf9f5;
       border-radius: 30px;
-      border: 2px dashed #E3BC9A;
+      border: 2px dashed #FCC3C2;
       text-align: left;
     }
     .order-summary h2 {
       margin: 10px auto;
       font-size: 40px;
       text-align: center;
-      color: #E3BC9A;
+      color: #FCC3C2;
     }
     .order-summary p, .order-summary li {
       font-size: 40px;
@@ -60,14 +60,14 @@
       display: inline-block;
       margin-top: 30px;
       padding: 12px 25px;
-      background-color: #E3BC9A;
+      background-color: #FCC3C2;
       color: #fff;
       border-radius: 25px;
       text-decoration: none;
       font-size: 40px;
     }
     .back-home:hover {
-      background-color: #d1a47b;
+      background-color: #FCC3C2;
     }
   </style>
 </head>
