--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
    :root {
   --fade-duration: 0.6s;
-  --fade-distance: 20px;
+  --fade-distance: 30px;
 }
 
 .store-title:hover {
@@ -134,7 +134,7 @@
       margin: 20px auto;
       background-color: var(--theme-color);
       color: #FFFFFF;
-      background-color:#E3BC9A;
+      background-color:#FCC3C2;
       padding: 10px 25px;
       border-radius: 5px;
       text-decoration: none;
