--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <!-- ===== HEADER ===== -->
   <header class="top-header">
     <div class="header-left">
-      <img src="images/a.jpeg" alt="Logo" class="logo" />
+      <img src="images/IMG_Logo.jpeg" alt="Logo" class="logo" />
     </div>
     
     <div class="store-info">
